TODO
* check TODOs

* complete libfvalue and test information file read/write
* configure validate libuna and libbfio check
* close segment file handle on writing when full?
* check if information file is handled correctly on close/free

Features
* allow set of segment filename during write (as alternative writing locations)
* add read and write random functions
* implement write resume
* glob of .1ofN for PREFIX (without the initial extension to help the glob function)

Tooling
* detect maximum possible segment size on file system (e.g. FAT)

Test
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add glob test to msvscpp project

Beta release
* remove deprecated functions in libsmraw_legacy.[ch]

20100928
* updated liberror, libnotify, libbfio, libfvalue
* code clean
* added access flags API functions
* worked on TODOs

20100805
* textual changes
* updated libcstring, libbfio, libfvalue
* updated msvscpp and codegear files

20100727
* updated libmfdata

20100724
* updated libmfdata

20100723
* updated libbfio, libmfdata

20100722
* reverted libsmraw back to 20100719-1 version to test without libfvalue
  changes
* updated include/error.h and liberror
* updated libuna, libbfio, libfvalue
* worked on libmfdata integration

20100721
* worked on libfvalue

20100720
* moved information and integrity hash value functions to UTF-8 versions
* worked on libfvalue
  - moved values tables to libvalue
* updated libbfio

20100719
* updated include/error.h and liberror
* updated common, libuna, libbfio

20100716
* updated libuna, libbfio

20100714
* updated configure.ac
* updated include/error.h and liberror
* updated include/codepage.h
* updated common, libuna, libbfio

20100629
* fix for glob of .1of91 and larger

20100627
* updated common, libcstring, liberror, libuna, libbfio
* clean up
* fixed issue in glob_wide

20100624
* worked on support for XofN naming schema